# systemGO

./: .gitignore  3_PHASE_AUTOMATION_SUMMARY.md  BENCHMARK_IMPLEMENTATION_COMPLETE.md  BENCHMARK_SYSTEM.md  COMMIT_SUCCESS_SUMMARY.md  COMPREHENSIVE_TEST_REVIEW_GUIDE.md  CRASH_ANALYSIS_AND_SAFE_MODE.md  DOCUMENTATION_INDEX.md  E2E_INTERACTIVE_STATUS.md  EXECUTION_SUMMARY.md  GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_HTML_VALIDATION_GUIDE.md  INTERACTIVE_VALIDATION_COMPLETE.md  INVESTIGATION_WORKFLOW.md  KAGGLE_DATASETS_COMPLETE.md  LOAD_TEST_RESULTS.md  MODEL_TESTING_GUIDE.md  MODE_TESTING_GUIDE.md  MODE_TESTING_IMPLEMENTATION_COMPLETE.md  MODE_TESTING_ISSUES_ANALYSIS.md  MODE_TESTING_PROGRESS.md  PACKAGE_VERSIONS.md  QUICK_REFERENCE.txt  QUICK_START.md  QUICK_START_REALISTIC_TESTS.txt  RAGAS_AND_INTERACTIVE_VALIDATION.md  RAGAS_COMPLETION_SUMMARY.md  RAG_BENCHMARK_RESULTS.md  RAG_EVALUATION_RESULTS.md  README.md  REALISTIC_USECASE_IMPLEMENTATION.md  STAGE3_ANALYSIS_AND_FIXES.md  TESTING_COMPLETE.md  TESTING_EXECUTION_PLAN.md  TESTING_SESSION_SUMMARY.md  TEST_FAILURE_GUIDE.md  TEST_FINDINGS.md  TEST_RESULTS_METADATA_FIX.md  TEST_RESULTS_REALISTIC_USECASES.md  (+23 more)
fixtures/: rename_datasets.py  validate_datasets.py
fixtures/golden_outputs/: interactive_validation_20251229_174957.html  interactive_validation_20251229_222944.html  interactive_validation_20251230_075732.html  interactive_validation_20251230_172821.html  interactive_validation_20251230_172853.html  (+12 more)
rangerio_tests/: __init__.py  config.py  conftest.py
scripts/: investigate_rag_retrieval.py
(+77 files in other folders)
