[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rangerio_tests"
version = "1.0.0"
description = "SYSTEM GO - RangerIO Automated Testing Suite"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-html>=4.1.1",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "playwright>=1.40.0",
    "locust>=2.20.0",
    "ragas>=0.1.7",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "psutil>=5.9.6",
    "faker>=22.0.0",
    "Pillow>=10.2.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["rangerio_tests*"]








